--- a/style/index.css
+++ b/style/index.css
@@ -31,6 +31,19 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
+header nav {
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 2%;
+    font-size: 14px;
+}
+
+header nav a {
+    color: black;
+    text-decoration: none;
+}
 ol, ul {
 	list-style: none;
 }
@@ -144,3 +157,29 @@ footer nav a {
     color: white;
     text-decoration: none;
 }
+
+@media (max-width: 800px){
+    .container {
+      flex-wrap: wrap;
+      text-align: center;
+      justify-content: center;
+    }
+    .top-content {
+      flex-wrap: wrap;
+      text-align: center;
+      justify-content: center;
+    }
+  }
+
+  @media (max-width: 500px){
+    .container {
+        flex-wrap: wrap;
+        text-align: center;
+        justify-content: center;
+      }
+      .top-content {
+        flex-wrap: wrap;
+        text-align: center;
+        justify-content: center;
+      }
+  }
