--- a/style/index.css
+++ b/style/index.css
@@ -32,11 +32,11 @@ body {
 	line-height: 1;
 }
 header nav {
-    width: 60%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 2%;
+    padding: 20px 1%;
     font-size: 14px;
 }
 
@@ -95,6 +95,7 @@ p {
 .top-content .text-container {
     width: 48%;
     padding: 0 1%;
+    padding-top: 20px;
     padding-bottom: 20px;  
 }
 
@@ -114,10 +115,100 @@ p {
     justify-content: space-evenly;
 }
 
-.middle-content .boxes .box {
+.middle-content .boxes .box1 {
     width: 12.5%;
     height: 100px;
-    background: black;
+    background: teal;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box2 {
+    width: 12.5%;
+    height: 100px;
+    background: gold;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box3 {
+    width: 12.5%;
+    height: 100px;
+    background: cadetblue;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box4 {
+    width: 12.5%;
+    height: 100px;
+    background: coral;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box5 {
+    width: 12.5%;
+    height: 100px;
+    background: crimson;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box6 {
+    width: 12.5%;
+    height: 100px;
+    background: forestgreen;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box7 {
+    width: 12.5%;
+    height: 100px;
+    background: darkorchid;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box8 {
+    width: 12.5%;
+    height: 100px;
+    background: hotpink;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box9 {
+    width: 12.5%;
+    height: 100px;
+    background: indigo;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box10 {
+    width: 12.5%;
+    height: 100px;
+    background: dodgerblue;
     margin: 20px 2.5%;
     color: white;
     display: flex;
@@ -159,27 +250,28 @@ footer nav a {
 }
 
 @media (max-width: 800px){
-    .container {
-      flex-wrap: wrap;
+    .container .text-container {
+      flex-direction: column;  
+      align-items: center;
       text-align: center;
-      justify-content: center;
     }
-    .top-content {
-      flex-wrap: wrap;
+    }
+    .top-content .boxes {
+      flex-direction: column;
+      align-items: center;
       text-align: center;
-      justify-content: center;
     }
   }
 
   @media (max-width: 500px){
-    .container {
-        flex-wrap: wrap;
+    .container .text-container {
+        flex-direction: column;  
+        align-items: center;
         text-align: center;
-        justify-content: center;
       }
-      .top-content {
-        flex-wrap: wrap;
+      .top-content .boxes {
+        flex-direction: column;
+        align-items: center;
         text-align: center;
-        justify-content: center;
       }
   }
